# boto-3

.idx/: dev.nix
2026-g-1/lec-1/: main.py  pyproject.toml
2026-g-1/lec-2/: README.md  main.py  pyproject.toml
2026-g-1/lec-2/tasks/: task-1.py  task-2.py  task-3.py
